fix(css): align image and text same height

--- a/src/main/resources/static/css/default.css
+++ b/src/main/resources/static/css/default.css
@@ -33,6 +33,8 @@ a {
     height: 100%;
 
     background-color: red;
+
+    vertical-align: middle;
 }
 
 #logo img {
